работа с pytest.ini

--- a/lesson_04/pytest.ini
+++ b/lesson_04/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 markers =
-  positive: Позитивные тесты.
-  negative: Негативные тесты.
+    positive: Positive test cases
+    negative: Negative test cases
